--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <meta property="og:title" content="CreatorOS - AI-Powered Operating System for Content Creators" />
     <meta property="og:description" content="The ultimate AI-powered platform for Instagram, YouTube, and TikTok creators." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/placeholder.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="CreatorOS" />
     <meta name="twitter:description" content="AI-Powered Operating System for Content Creators" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/placeholder.svg" />
     
     <link rel="canonical" href="https://creatoros.app" />
   </head>
